Add evaluation for attention model.

--- a/get_attention_model_evaluation_data.ipynb
+++ b/get_attention_model_evaluation_data.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sense_key</th>\n      <th>lemma</th>\n      <th>word_position</th>\n      <th>text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>keep%2:42:07::</td>\n      <td>keep.v</td>\n      <td>15</td>\n      <td>Action by the Committee In pursuance of its ma...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>national%3:01:00::</td>\n      <td>national.a</td>\n      <td>25</td>\n      <td>A guard of honour stood in formation in honour...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>build%2:31:03::</td>\n      <td>build.v</td>\n      <td>38</td>\n      <td>The principle that statistics should be timely...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>place%1:04:00::</td>\n      <td>place.n</td>\n      <td>36</td>\n      <td>Again , he appealed for additional support for...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>position%1:04:01::</td>\n      <td>position.n</td>\n      <td>76</td>\n      <td>Also , the IAEA has the lowest number of women...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 9
     }
    ],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +173,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>lemma</th>\n      <th>word_pos</th>\n      <th>sense_key</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Action by the Committee In pursuance of its ma...</td>\n      <td>keep.v</td>\n      <td>15</td>\n      <td>keep%2:42:07::</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A guard of honour stood in formation in honour...</td>\n      <td>national.a</td>\n      <td>25</td>\n      <td>national%3:01:00::</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>The principle that statistics should be timely...</td>\n      <td>build.v</td>\n      <td>38</td>\n      <td>build%2:31:03::</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Again , he appealed for additional support for...</td>\n      <td>place.n</td>\n      <td>36</td>\n      <td>place%1:04:00::</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Also , the IAEA has the lowest number of women...</td>\n      <td>position.n</td>\n      <td>76</td>\n      <td>position%1:04:01::</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 10
     }
    ],
    "source": [
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +207,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>lemma</th>\n      <th>word_pos</th>\n      <th>sense_key</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Action by the Committee In pursuance of its ma...</td>\n      <td>keep.v</td>\n      <td>15</td>\n      <td>keep%2:42:07::</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A guard of honour stood in formation in honour...</td>\n      <td>national.a</td>\n      <td>25</td>\n      <td>national%3:01:00::</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>The principle that statistics should be timely...</td>\n      <td>build.v</td>\n      <td>38</td>\n      <td>build%2:31:03::</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Again , he appealed for additional support for...</td>\n      <td>place.n</td>\n      <td>37</td>\n      <td>place%1:04:00::</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Also , the IAEA has the lowest number of women...</td>\n      <td>position.n</td>\n      <td>76</td>\n      <td>position%1:04:01::</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 11
     }
    ],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -242,7 +242,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>text</th>\n      <th>lemma</th>\n      <th>word_pos</th>\n      <th>sense_key</th>\n      <th>lemmatized_text</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>Action by the Committee In pursuance of its ma...</td>\n      <td>keep.v</td>\n      <td>15</td>\n      <td>keep%2:42:07::</td>\n      <td>action by the Committee in pursuance of -PRON-...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>A guard of honour stood in formation in honour...</td>\n      <td>national.a</td>\n      <td>25</td>\n      <td>national%3:01:00::</td>\n      <td>a guard of honour stand in formation in honour...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>The principle that statistics should be timely...</td>\n      <td>build.v</td>\n      <td>38</td>\n      <td>build%2:31:03::</td>\n      <td>the principle that statistic should be timely ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>Again , he appealed for additional support for...</td>\n      <td>place.n</td>\n      <td>37</td>\n      <td>place%1:04:00::</td>\n      <td>again , -PRON- appeal for additional support f...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>Also , the IAEA has the lowest number of women...</td>\n      <td>position.n</td>\n      <td>76</td>\n      <td>position%1:04:01::</td>\n      <td>also , the IAEA have the low number of woman p...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 12
     }
    ],
    "source": [
@@ -338,6 +338,51 @@
    "source": [
     "look_at_data_example(processor.get_data(), 45)"
    ]
+  },
+  {
+   "source": [
+    "#### Save lemmatized data"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Given data with head:\n",
+      "                                                text       lemma  word_pos  \\\n",
+      "0  Action by the Committee In pursuance of its ma...      keep.v        15   \n",
+      "1  A guard of honour stood in formation in honour...  national.a        25   \n",
+      "2  The principle that statistics should be timely...     build.v        38   \n",
+      "3  Again , he appealed for additional support for...     place.n        37   \n",
+      "4  Also , the IAEA has the lowest number of women...  position.n        76   \n",
+      "\n",
+      "            sense_key                                    lemmatized_text  \n",
+      "0      keep%2:42:07::  action by the Committee in pursuance of -PRON-...  \n",
+      "1  national%3:01:00::  a guard of honour stand in formation in honour...  \n",
+      "2     build%2:31:03::  the principle that statistic should be timely ...  \n",
+      "3     place%1:04:00::  again , -PRON- appeal for additional support f...  \n",
+      "4  position%1:04:01::  also , the IAEA have the low number of woman p...  \n",
+      "Saved data!\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_data_to_file(processor.get_data())"
+   ]
+  },
+  {
+   "source": [
+    "#### Get sense encoded text"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
@@ -617,23 +662,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = load_data_from_file()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "8420"
+       "97"
       ]
      },
      "metadata": {},
-     "execution_count": 22
+     "execution_count": 6
     }
    ],
    "source": [
     "voc = help_functions.Vocabulary(min_word_freq=22, include_unknown=True, lower=True, character=False)\n",
-    "voc.build(processor.get_data().sense_encoded_text)\n",
+    "voc.build(data.sense_encoded_text)\n",
     "len(voc)"
    ]
   },
