Commence support for evaluating BERT model.

--- a/get_BERT_data.ipynb
+++ b/get_BERT_data.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "source": [
-    "## 2. Create training samples"
+    "## 2. Split into training and testing data"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -191,6 +191,33 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_indices, test_indices = train_test_split(range(len(data)), test_size=.2, random_state=42)\n",
+    "train_data = data.iloc[train_indices].copy()\n",
+    "test_data = data.iloc[test_indices].copy()"
+   ]
+  },
+  {
+   "source": [
+    "## 3. Create training samples"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,27 +243,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_data_1, X_data_2, y_data = create_sentence_pair_data(data)"
+    "X_data_1, X_data_2, y_data = create_sentence_pair_data(train_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "'Action by the Committee In pursuance of its mandate , the Committee will continue to keep under review the situation relating to the question of Palestine and participate in relevant meetings of the General Assembly and the Security Council . The Committee will also continue to monitor the situation on the ground and draw the attention of the international community to urgent developments in the Occupied Palestinian Territory , including East Jerusalem , requiring international action .'"
+       "'( vii ) BGL - General Trust Fund for the Core Programme Budget for the Biosafety Protocol , which is extended through 31 December 2011 ; ( viii ) BHL - Special Voluntary Trust Fund for Additional Voluntary Contributions in Support of Approved Activities of the Biosafety Protocol , which is extended through 31 December 2011 ; ( ix ) BTL - General Trust Fund for the Conservation of European Bats ( EUROBATS ) , which is extended through 31 December 2014 ;'"
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 13
     }
    ],
    "source": [
@@ -245,24 +272,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Number of data samples: 152098\n"
+      "Number of data samples for training: 121678\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Number of data samples: {len(X_data_1)}\")"
+    "print(f\"Number of data samples for training: {len(X_data_1)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,11 +304,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_data_with_pickle({\"X_data_1\": X_data_1, \"X_data_2\": X_data_2, \"y_data\": y_data})"
+    "save_data_with_pickle({\"X_data_1_train\": X_data_1, \"X_data_2_train\": X_data_2, \"y_data_train\": y_data})"
+   ]
+  },
+  {
+   "source": [
+    "## 4. Create testing samples"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Number of data samples for testing: 30420\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_data_1, X_data_2, y_data = create_sentence_pair_data(test_data)\n",
+    "print(f\"Number of data samples for testing: {len(X_data_1)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_data_with_pickle({\"X_data_1_test\": X_data_1, \"X_data_2_test\": X_data_2, \"y_data_test\": y_data})"
+   ]
+  },
+  {
+   "source": [
+    "### Create samples for evaluation"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_evaluation_sentence_pair_data(data):\n",
+    "    evaluation_data = {}\n",
+    "    def add_data_entry(row, sense_key):\n",
+    "        two_sentences = []\n",
+    "        X_data_1.append(row.text)\n",
+    "        X_data_2.append(sentence_per_lemma_sense[row.lemma][sense_key])\n",
+    "\n",
+    "    for index, row in data.iterrows():\n",
+    "        X_data_1 = [] # pairs!\n",
+    "        X_data_2 = []\n",
+    "        y_data = [0]\n",
+    "\n",
+    "        add_data_entry(row, row.sense_key)\n",
+    "\n",
+    "        faulty_senses = list(sentence_per_lemma_sense[row.lemma].keys())\n",
+    "        faulty_senses.remove(row.sense_key)\n",
+    "        for faulty_sense_key in faulty_senses:\n",
+    "            add_data_entry(row, faulty_sense_key)\n",
+    "        \n",
+    "        if row.lemma in evaluation_data:\n",
+    "            evaluation_data[row.lemma][\"X_data_1\"].append(X_data_1)\n",
+    "            evaluation_data[row.lemma][\"X_data_2\"].append(X_data_2)\n",
+    "            evaluation_data[row.lemma][\"y_data\"].append(y_data)\n",
+    "        else:\n",
+    "            evaluation_data[row.lemma] = {}\n",
+    "            evaluation_data[row.lemma][\"X_data_1\"] = X_data_1\n",
+    "            evaluation_data[row.lemma][\"X_data_2\"] = X_data_2\n",
+    "            evaluation_data[row.lemma][\"y_data\"] = y_data\n",
+    "\n",
+    "    return evaluation_data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Lemmas to evaluate for:\ndict_keys(['lead.v', 'extend.v', 'regular.a', 'see.v', 'position.n', 'find.v', 'force.n', 'hold.v', 'build.v', 'serve.v', 'keep.v', 'bad.a', 'national.a', 'point.n', 'order.n', 'time.n', 'physical.a', 'professional.a', 'place.n', 'case.n', 'line.n', 'security.n', 'follow.v', 'common.a', 'critical.a', 'positive.a', 'life.n', 'bring.v', 'major.a', 'active.a'])\n\nEvaluation samples per lemma:\n{'lead.v': 524, 'extend.v': 528, 'regular.a': 392, 'see.v': 1337, 'position.n': 446, 'find.v': 462, 'force.n': 556, 'hold.v': 630, 'build.v': 525, 'serve.v': 610, 'keep.v': 1081, 'bad.a': 356, 'national.a': 451, 'point.n': 419, 'order.n': 403, 'time.n': 405, 'physical.a': 387, 'professional.a': 377, 'place.n': 382, 'case.n': 469, 'line.n': 1129, 'security.n': 433, 'follow.v': 664, 'common.a': 358, 'critical.a': 310, 'positive.a': 260, 'life.n': 419, 'bring.v': 496, 'major.a': 311, 'active.a': 282}\n"
+     ]
+    }
+   ],
+   "source": [
+    "evaluation_data = create_evaluation_sentence_pair_data(test_data)\n",
+    "print(f\"Lemmas to evaluate for:\")\n",
+    "print(evaluation_data.keys())\n",
+    "print(\"\")\n",
+    "nbr_of_evaluation_samples_per_lemma = {lemma: len(evaluation_data[lemma][\"X_data_1\"]) for lemma in evaluation_data.keys()}\n",
+    "print(f\"Evaluation samples per lemma:\")\n",
+    "print(nbr_of_evaluation_samples_per_lemma)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_data_with_pickle({\"evaluation_data\": evaluation_data})"
    ]
   }
  ]
