Add new iteration of attention models and evaluation.

--- a/evaluate_attention_model.ipynb
+++ b/evaluate_attention_model.ipynb
@@ -42,139 +42,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F"
+    "import torch.nn.functional as F\n",
+    "\n",
+    "import attention_models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class PositionalEncoding(nn.Module):\n",
-    "    r\"\"\"Inject some information about the relative or absolute position of the tokens\n",
-    "        in the sequence. The positional encodings have the same dimension as\n",
-    "        the embeddings, so that the two can be summed. Here, we use sine and cosine\n",
-    "        functions of different frequencies.\n",
-    "    .. math::\n",
-    "        \\text{PosEncoder}(pos, 2i) = sin(pos/10000^(2i/d_model))\n",
-    "        \\text{PosEncoder}(pos, 2i+1) = cos(pos/10000^(2i/d_model))\n",
-    "        \\text{where pos is the word position and i is the embed idx)\n",
-    "    Args:\n",
-    "        d_model: the embed dim (required).\n",
-    "        dropout: the dropout value (default=0.1).\n",
-    "        max_len: the max. length of the incoming sequence (default=5000).\n",
-    "    Examples:\n",
-    "        >>> pos_encoder = PositionalEncoding(d_model)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, d_model, dropout=0.1, max_len=5000):\n",
-    "        super(PositionalEncoding, self).__init__()\n",
-    "        self.dropout = nn.Dropout(p=dropout)\n",
-    "\n",
-    "        pe = torch.zeros(max_len, d_model)\n",
-    "        position = torch.arange(0, max_len, dtype=torch.float).unsqueeze(1)\n",
-    "        div_term = torch.exp(torch.arange(0, d_model, 2).float() * (-math.log(10000.0) / d_model))\n",
-    "        pe[:, 0::2] = torch.sin(position * div_term)\n",
-    "        pe[:, 1::2] = torch.cos(position * div_term)\n",
-    "        pe = pe.unsqueeze(0).transpose(0, 1)\n",
-    "        self.register_buffer('pe', pe)\n",
-    "\n",
-    "    def forward(self, x):\n",
-    "        r\"\"\"Inputs of forward function\n",
-    "        Args:\n",
-    "            x: the sequence fed to the positional encoder model (required).\n",
-    "        Shape:\n",
-    "            x: [sequence length, batch size, embed dim]\n",
-    "            output: [sequence length, batch size, embed dim]\n",
-    "        Examples:\n",
-    "            >>> output = pos_encoder(x)\n",
-    "        \"\"\"\n",
-    "\n",
-    "        x = x + self.pe[:x.size(0), :]\n",
-    "        return self.dropout(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "class MyAttentionModelWithMaskOnWordPositionAndSkip(nn.Module):\n",
-    "    \"\"\"My Attention model, based on the Transformer encoder.\"\"\"\n",
-    "\n",
-    "    def __init__(self, vocab_size, embedding_dim, max_seq_len, num_heads, dim_feedforward, num_layers, dropout=0.5):\n",
-    "        super(MyAttentionModelWithMaskOnWordPositionAndSkip, self).__init__()\n",
-    "        try:\n",
-    "            from torch.nn import TransformerEncoder, TransformerEncoderLayer\n",
-    "        except:\n",
-    "            raise ImportError('TransformerEncoder module does not exist in PyTorch 1.1 or lower.')\n",
-    "        self.model_type = 'Transformer'\n",
-    "        self.src_mask = None\n",
-    "        self.pos_encoder = PositionalEncoding(embedding_dim, dropout=0.1, max_len=max_seq_len)\n",
-    "        encoder_layers = TransformerEncoderLayer(embedding_dim, num_heads, dim_feedforward, dropout)\n",
-    "        # output shape (batch_size, max_seq_len, embedding_dim)\n",
-    "        self.transformer_encoder = TransformerEncoder(encoder_layers, num_layers) \n",
-    "        self.encoder = nn.Embedding(vocab_size, embedding_dim)\n",
-    "        self.embedding_dim = embedding_dim\n",
-    "        self.decoder = nn.Linear(embedding_dim, 1)\n",
-    "        self.batch_normer = torch.nn.BatchNorm1d(embedding_dim)\n",
-    "        self.decoder_act = nn.Sigmoid()\n",
-    "\n",
-    "        self.init_weights()\n",
-    "\n",
-    "    def _generate_square_subsequent_mask(self, sz):\n",
-    "        mask = (torch.triu(torch.ones(sz, sz)) == 1).transpose(0, 1)\n",
-    "        mask = mask.float().masked_fill(mask == 0, float('-inf')).masked_fill(mask == 1, float(0.0))\n",
-    "        return mask\n",
-    "\n",
-    "    def init_weights(self):\n",
-    "        initrange = 0.1\n",
-    "        nn.init.uniform_(self.encoder.weight, -initrange, initrange)\n",
-    "        nn.init.zeros_(self.decoder.weight)\n",
-    "        nn.init.uniform_(self.decoder.weight, -initrange, initrange)\n",
-    "\n",
-    "    def forward(self, src, word_position_mask, has_mask=True):\n",
-    "        if has_mask:\n",
-    "            device = src.device\n",
-    "            if self.src_mask is None or self.src_mask.size(0) != len(src):\n",
-    "                mask = self._generate_square_subsequent_mask(len(src)).to(device)\n",
-    "                self.src_mask = mask\n",
-    "        else:\n",
-    "            self.src_mask = None\n",
-    "\n",
-    "        #print(f\"Input shape: {src.shape}\")\n",
-    "        #print(f\"Mask shape: {word_position_mask.shape}\")\n",
-    "        src = self.encoder(src) * math.sqrt(self.embedding_dim)\n",
-    "        #print(f\"Embedded src shape: {src.shape}\")\n",
-    "        skip_src = torch.masked_select(src, word_position_mask.unsqueeze(-1).expand(src.shape)).view(-1, 1, self.embedding_dim)\n",
-    "        #print(f\"Skip src shape: {skip_src.shape}\")\n",
-    "        src = self.pos_encoder(src)\n",
-    "        #print(f\"Positional encoding shape: {src.shape}\")\n",
-    "        #print(f\"Word position mask shape after unsqueeze: {word_position_mask.unsqueeze(-1).expand(src.shape).shape}\")\n",
-    "        src = torch.masked_select(src, word_position_mask.unsqueeze(-1).expand(src.shape)).view(-1, 1, self.embedding_dim)\n",
-    "        #print(f\"Masked output shape: {src.shape}\")\n",
-    "        output = self.transformer_encoder(src, self.src_mask)\n",
-    "        #print(f\"Transformer encoder output shape: {output.shape}\")\n",
-    "        output = torch.add(output, skip_src).squeeze(1)\n",
-    "        #print(f\"Added output shape: {output.shape}\")\n",
-    "        output = self.batch_normer(output)\n",
-    "        output = self.decoder(output)\n",
-    "        #print(f\"Decoder output shape: {output.shape}\")\n",
-    "        return self.decoder_act(output)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -185,14 +67,14 @@
       ]
      },
      "metadata": {},
-     "execution_count": 76
+     "execution_count": 127
     }
    ],
    "source": [
-    "MODEL_PATH = \"attention_data/model_1\"\n",
+    "MODEL_PATH = \"attention_data/model_2_train_76_val_68\"\n",
     "max_sequence_length = 283\n",
     "\n",
-    "model = MyAttentionModelWithMaskOnWordPositionAndSkip(vocab_size=len(voc), embedding_dim=16, max_seq_len=max_sequence_length, num_heads=1, dim_feedforward=16, num_layers=2, dropout=0.1)\n",
+    "model = attention_models.MyAttentionModelWithMaskOnWordPositionOutputAndMaskedSkipCORRECTEDwithMaskOnPaddingBothWaysTransposed(vocab_size=len(voc), embedding_dim=8, max_seq_len=max_sequence_length, num_heads=2, dim_feedforward=8, num_layers=1, dropout=0.1)\n",
     "model.load_state_dict(torch.load(MODEL_PATH))"
    ]
   },
@@ -524,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 128,
    "metadata": {
     "tags": []
    },
@@ -563,14 +445,97 @@
       "Evaluating model for lemma follow.v...\n",
       "Evaluating model for lemma order.n...\n",
       "Evaluating model for lemma build.v...\n",
-      "Evaluating model for lemma position.n...\n",
-      "{'case.n': 0.22807017543859648, 'major.a': 0.294238683127572, 'life.n': 0.20851063829787234, 'security.n': 0.20457796852646637, 'lead.v': 0.17523364485981308, 'extend.v': 0.3620474406991261, 'point.n': 0.5849056603773585, 'see.v': 0.6167747914735866, 'force.n': 0.14672686230248308, 'national.a': 0.0, 'line.n': 0.8397849462365592, 'physical.a': 0.2254601226993865, 'regular.a': 0.4281391830559758, 'find.v': 0.0, 'bad.a': 0.59375, 'positive.a': 0.5682382133995038, 'hold.v': 0.1615678776290631, 'professional.a': 0.22392638036809817, 'bring.v': 0.17204301075268819, 'serve.v': 0.0, 'critical.a': 0.2843866171003718, 'common.a': 0.46459412780656306, 'keep.v': 0.3925438596491228, 'time.n': 0.26519337016574585, 'active.a': 0.30701754385964913, 'place.n': 0.240625, 'follow.v': 0.25241864555848725, 'order.n': 0.2213967310549777, 'build.v': 0.1656516443361754, 'position.n': 0.19655667144906744}\n"
+      "Evaluating model for lemma position.n...\n"
      ]
     }
    ],
    "source": [
     "test_acc = evaluate_model_per_lemma(model, eval_data)"
    ]
+  },
+  {
+   "source": [
+    "# MODEL 2"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'case.n': 0.08232118758434548,\n",
+       " 'major.a': 0.16049382716049382,\n",
+       " 'life.n': 0.21560283687943263,\n",
+       " 'security.n': 0.09585121602288985,\n",
+       " 'lead.v': 0.03387850467289719,\n",
+       " 'extend.v': 0.3096129837702871,\n",
+       " 'point.n': 0.0660377358490566,\n",
+       " 'see.v': 0.335032437442076,\n",
+       " 'force.n': 0.07674943566591422,\n",
+       " 'national.a': 0.11095305832147938,\n",
+       " 'line.n': 0.8204301075268817,\n",
+       " 'physical.a': 0.09815950920245399,\n",
+       " 'regular.a': 0.09228441754916793,\n",
+       " 'find.v': 0.1064102564102564,\n",
+       " 'bad.a': 0.2760416666666667,\n",
+       " 'positive.a': 0.07444168734491315,\n",
+       " 'hold.v': 0.06309751434034416,\n",
+       " 'professional.a': 0.18404907975460122,\n",
+       " 'bring.v': 0.06332138590203107,\n",
+       " 'serve.v': 0.03767820773930754,\n",
+       " 'critical.a': 0.15613382899628253,\n",
+       " 'common.a': 0.4542314335060449,\n",
+       " 'keep.v': 0.1737938596491228,\n",
+       " 'time.n': 0.09116022099447514,\n",
+       " 'active.a': 0.14035087719298245,\n",
+       " 'place.n': 0.1890625,\n",
+       " 'follow.v': 0.13896218117854,\n",
+       " 'order.n': 0.25705794947994054,\n",
+       " 'build.v': 0.02679658952496955,\n",
+       " 'position.n': 0.1649928263988522}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 129
+    }
+   ],
+   "source": [
+    "test_acc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "0.16983297742422357"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 132
+    }
+   ],
+   "source": [
+    "mean_test_acc = sum(test_acc.values())/len(test_acc)\n",
+    "mean_test_acc"
+   ]
+  },
+  {
+   "source": [
+    "# MODEL 1"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
